@@ -1,3 +1,9 @@
+2007-07-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (wp_view_tooltip_cb), (desktop_init):
+	* data/appearance.glade: get rid of a number of unnecessary casts and the
+	gtk version checks since we now depend on 2.11.6 unconditionally
+
 2007-07-28  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance-style.c: (prepare_list):
